force-app/main/default/objects/Site__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>