force-app/main/default/objects/Site__c/fields/Site_Leader__c.field-meta.xml
<CustomField>
    <fullName>Site_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites2</relationshipName>
    <type>Lookup</type>
</CustomField>