force-app/main/default/objects/Site__c/fields/Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Chain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>