force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Controller__c</columns>
    <columns>Supply_Chain__c</columns>
    <columns>Site_Leader__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>